--- a/ui/src/Components/ContentContainer/ContentContainer.module.css
+++ b/ui/src/Components/ContentContainer/ContentContainer.module.css
@@ -1,16 +1,63 @@
-.contentContainer{
-    display: table;
-    margin: auto;
-    padding: 10px;
-    margin-bottom: 10px;
+.contentContainer {
+	/* display: table;
+	margin: auto;
+	padding: 10px;
+	margin-bottom: 10px; */
+	align-items: stretch;
+	width: 100%;
+	display: grid;
 }
-.heading{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    font-size: 20px;
-    padding: 0 0 10px 0;
+
+.heading {
+	font-style: 'normal';
+	font-weight: 700;
+	font-size: 32px;
+	letter-spacing: '-0.02em';
+	line-height: '120%';
+	color: ' #1E1F21';
+	padding: 0 0 10px 0;
+	position: relative;
+	margin-left: 1%;
 }
-.renderSection{
-    font-family: 'Open Sans', sans-serif;
-    padding: 10px 0 0 0;
+
+.renderSection {
+	font-family: 'Open Sans', sans-serif;
+	padding: 10px 0 0 0;
+}
+
+
+.defaultHeaderBtn {
+	background-color: #006392;
+	color: #ffffff;
+	padding: 10px;
+	margin-right: 10px;
+}
+
+.headerBtnStyle {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 16px;
+	gap: 10px;
+
+	width: 191px;
+	height: 56px;
+
+	/* Blue/Gradient */
+
+	background: linear-gradient(247.73deg, #00A3D6 0%, #00578E 100%);
+	border-radius: 16px;
+
+	/* Inside auto layout */
+
+	flex: none;
+	order: 1;
+	flex-grow: 0;
+}
+.btnStyle{
+	background: linear-gradient(247.73deg, #00A3D6 0%, #00578E 100%);
+}
+.btnStyle:hover{
+	background: #00578E !important;
 }
